--- a/Proyecto_II.ipynb
+++ b/Proyecto_II.ipynb
@@ -47,13 +47,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rQHYUV24WjG0",
-        "outputId": "ea50e2e4-581f-4b18-dd4d-37351e04fbe7"
+        "outputId": "9c0a1ba5-4fc8-4cff-e66b-460cdc7787c3"
       },
       "outputs": [
         {
@@ -67,14 +67,15 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 3.40M/3.40M [00:00<00:00, 102MB/s]"
+            "100%|██████████| 3.40M/3.40M [00:00<00:00, 150MB/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Extracting files...\n"
+            "Extracting files...\n",
+            "Path to dataset files: /root/.cache/kagglehub/datasets/kukuroo3/body-signal-of-smoking/versions/2\n"
           ]
         },
         {
@@ -82,13 +83,6 @@
           "name": "stderr",
           "text": [
             "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Path to dataset files: /root/.cache/kagglehub/datasets/kukuroo3/body-signal-of-smoking/versions/2\n"
           ]
         }
       ],
@@ -123,7 +117,7 @@
       "metadata": {
         "id": "qt9E1sm5aI-F"
       },
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -3012,6 +3006,46 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.feature_selection import mutual_info_classif\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import GridSearchCV, RepeatedStratifiedKFold\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "import numpy as np\n",
+        "\n",
+        "# define the evaluation method\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "\n",
+        "# define the pipeline to evaluate\n",
+        "model = LogisticRegression(solver='liblinear')\n",
+        "\n",
+        "# usar información mutua\n",
+        "fs = SelectKBest(score_func=mutual_info_classif)\n",
+        "\n",
+        "pipeline = Pipeline(steps=[('mutual', fs), ('lr', model)])\n",
+        "\n",
+        "# define the grid\n",
+        "grid = dict()\n",
+        "grid['mutual__k'] = list(range(1, X.shape[1] + 1))  # probar todos los k\n",
+        "\n",
+        "# define the grid search\n",
+        "search = GridSearchCV(pipeline, grid, scoring='accuracy', n_jobs=-1, cv=cv)\n",
+        "\n",
+        "# perform the search\n",
+        "results = search.fit(X, y)\n",
+        "\n",
+        "# summarize best\n",
+        "print('Best Mean Accuracy: %.3f' % results.best_score_)\n",
+        "print('Best Config: %s' % results.best_params_)\n"
+      ],
+      "metadata": {
+        "id": "sttdtyODPn1O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.model_selection import cross_val_score\n",
         "from numpy import mean\n",
         "from numpy import std\n",
@@ -3566,7 +3600,7 @@
       "metadata": {
         "id": "Nr-UAAVo_vmY"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3583,7 +3617,7 @@
       "metadata": {
         "id": "xZeeo-FKBM2I"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3598,7 +3632,7 @@
       "metadata": {
         "id": "FeU6p5psBVX-"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3631,7 +3665,7 @@
         "id": "ngwn0G9wBatK",
         "outputId": "e83b5486-a4eb-4e77-98fc-99020cd1e95d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3705,7 +3739,7 @@
         "id": "jrbxcJPzFLis",
         "outputId": "1c32f0e6-7c57-4f04-a5b8-f79c52370b40"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
