--- a/Proyecto_II.ipynb
+++ b/Proyecto_II.ipynb
@@ -4282,9 +4282,57 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# **Modelos**\n",
+        "\n"
+      ],
       "metadata": {
         "id": "7vs-u-z-0swP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest"
+      ],
+      "metadata": {
+        "id": "I5BUCzaz1AJL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Extra-trees"
+      ],
+      "metadata": {
+        "id": "6-eiJrb-1OQj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "HistGradientBoosting"
+      ],
+      "metadata": {
+        "id": "Ce8ccXTv1Tw2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Logistics Regression"
+      ],
+      "metadata": {
+        "id": "9wmbpfBV1ZG_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SVM Linear"
+      ],
+      "metadata": {
+        "id": "p54m3-nl1h3N"
       }
     }
   ]
